# maya-curveLengthPreserveNode

./: .gitignore  CMakeLists.txt  FindMaya.cmake  LICENSE  README.md
plug-ins2022/: CurveLengthPreserve.mll
scripts/: AECurveLengthPreserveNodeTemplate.mel
src/: CMakeLists.txt  curveLengthPreserve.cpp  curveLengthPreserve.h  pluginMain.cpp
